# TextEditor

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  main.cpp
cmake/: FindWrapOpenGL.cmake
qml/: AppToolbar.qml  DocumentTextArea.qml  Main.qml  ViewerFooter.qml  ViewerStack.qml
src/editor/: TextDocument.cpp  TextDocument.h
src/parser/: MarkdownParser.cpp  MarkdownParser.h
src/render/: MarkdownRenderBridge.cpp  MarkdownRenderBridge.h  MarkdownRenderEngine.cpp  MarkdownRenderEngine.h
src/utils/: DocumentUtilities.cpp  DocumentUtilities.h  TextMetrics.cpp  TextMetrics.h  TimestampFormatter.cpp  TimestampFormatter.h
